Added map display

--- a/web/index.html
+++ b/web/index.html
@@ -2,13 +2,14 @@
   <head>
     <title>Grouter!</title>
     <link rel="icon" href="recources/logo_small.webp" />
-    <script src="http://www.openlayers.org/api/OpenLayers.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.15.1/css/ol.css" type="text/css">
+    <script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.15.1/build/ol.js"></script>
     <link rel="stylesheet" href="css/index.css" />
     <link rel="stylesheet" href="css/menu.css" />
     <meta charset="UTF-8" />
   </head>
   <body>
-    <div id="mapdiv" class="map"></div>
+    <div id="map" class="map"></div>
     <div id="menu" class="menu open transition">
       <div class="menu-button__container">
         <button onclick="toggleMenu()" class="menu-button">
