Added better colors

--- a/web/index.html
+++ b/web/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Grouter!</title>
-    <link rel="icon" href="recources/logo_small.webp" />
+    <link rel="icon" href="recourses/logo_small.webp" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.15.1/css/ol.css" type="text/css">
     <script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.15.1/build/ol.js"></script>
     <link rel="stylesheet" href="css/index.css" />
